Fix IOException bug and improve logs